Comments updated for is_brackets balanced

--- a/test_py.ipynb
+++ b/test_py.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9+ubXxpKjH9NHdO+5FkOb",
+      "authorship_tag": "ABX9TyNGfP4zMlrXjIsVsJ0vFGyn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,14 +34,20 @@
         "bracket_map = {\")\":\"(\", \"}\":\"{\", \"]\":\"[\"}\n",
         "\n",
         "def is_balanced(s):\n",
+        "  # reading each characters from the string\n",
         "  for ch in s:\n",
+        "    # check if the character in values, push it to stack if yes\n",
         "    if ch in bracket_map.values():\n",
         "      stk.append(ch)\n",
+        "      # else check if the character in keys\n",
         "    elif ch in bracket_map.keys():\n",
+        "      # pop the last char from the stack if TOP char matches with closing baracket in bracket_map\n",
         "      if stk and stk[-1] == bracket_map[ch]:\n",
         "        stk.pop()\n",
         "      else:\n",
+        "        # not matching\n",
         "        return False\n",
+        "  # matching\n",
         "  return True\n",
         "\n",
         "print(is_balanced(s))\n",
